--- a/extension/package.json
+++ b/extension/package.json
@@ -1,11 +1,10 @@
 {
   "name": "quasar-app-extension-ide-helper",
   "version": "0.0.1",
-  "description": "Extension to generate helpers for JetBrains IDE",
-  "author": "panstromek <panstromek@seznam.cz>",
-  "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
-  },
+  "description": "Quasar framework extension which enables IDE features like autocomplete by generating helper files for IDE to index.",
+  "author": "Matyáš Racek",
+  "license": "MIT",
+  "repository": "panstromek/quasar-ide-helper",
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.6.0",
