--- a/extension/package.json
+++ b/extension/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "fs-extra": "^7.0.1",
-    "xml-escape": "^1.1.0"
+    "xml-escape": "^1.1.0",
+    "@types/fs-extra": "^5.0.4"
   },
   "devDependencies": {
     "eslint": "^5.13.0"
