--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Matyáš Racek",
   "license": "MIT",
   "repository": "panstromek/quasar-ide-helper",
+  "main": "src/index.js",
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.6.0",
@@ -12,11 +13,10 @@
   },
   "dependencies": {
     "fs-extra": "^7.0.1",
-    "xml-escape": "^1.1.0",
-    "@types/fs-extra": "^5.0.4"
+    "xml-escape": "^1.1.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.0",
+    "@types/fs-extra": "^5.0.4",
     "eslint": "^5.13.0"
   }
 }
