--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quasar-app-extension-ide-helper",
-  "version": "0.0.6",
+  "version": "1.0.0-alpha.0",
   "description": "Quasar framework extension which enables IDE features like autocomplete by generating helper files for IDE to index.",
   "author": "Matyáš Racek",
   "license": "MIT",
